Fix hover look when link is wraped on next line

--- a/style.css
+++ b/style.css
@@ -47,26 +47,29 @@
 .list__item::after {
     content: "";
     position: absolute;
+    --height-formula: (1em + 2 * var(--padding-block));
+    --width-formula: (1em + 2 * var(--padding-block));
+    height: calc(var(--height-formula));
+    width: calc(var(--width-formula));
     background-color: var(--main-accent-color-light);
     border-radius: 0.5em;
     transition: all 0.25s ease;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
 }
 
 .list__item::before {
-    z-index: -1;
-    height: calc(1em + 2 * var(--padding-block));
-    width: calc(1em + 2 * var(--padding-block));
+    z-index: -2;
 }
 
 .list__item::after {
-    height: calc(1em + 2 * var(--padding-block));
-    width: calc(1em + 2 * var(--padding-block));
+    z-index: -1;
 }
 
 .list__item:hover::before,
 .list__item:focus::before{
+    height: 100%;
     width: 100%;
 }
 
@@ -74,14 +77,9 @@
 .list__item:focus::after{
     height: 1em;
     width: 1em;
-
-    top: var(--padding-block);
     left: var(--padding-block);
-
     border-radius: 0.3em;
-
     background-color: var(--main-accent-color);
-
     box-shadow: 0 0 0.3em 0 var(--main-accent-color);
 }
 
